@@ -1,11 +1,19 @@
 package pl.databucket.server.controller;
 
+import java.util.List;
+import javax.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import pl.databucket.server.dto.AuthReqDTO;
 import pl.databucket.server.dto.ManageUserDtoRequest;
 import pl.databucket.server.dto.ManageUserDtoResponse;
@@ -15,23 +23,18 @@ import pl.databucket.server.exception.ItemAlreadyExistsException;
 import pl.databucket.server.exception.SomeItemsNotFoundException;
 import pl.databucket.server.service.ManageUserService;
 
-import javax.validation.Valid;
-import java.util.List;
-import java.util.stream.Collectors;
-
 @PreAuthorize("hasRole('SUPER')")
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RequestMapping("/api/manage/users")
 @RestController
+@RequiredArgsConstructor
 public class ManageUserController {
 
-    @Autowired
-    private ManageUserService manageUserService;
-
-    @Autowired
-    private ModelMapper modelMapper;
+    private final ManageUserService manageUserService;
+    private final ModelMapper modelMapper;
 
     private final ExceptionFormatter exceptionFormatter = new ExceptionFormatter(ManageUserController.class);
+
 
     @PostMapping
     public ResponseEntity<?> createUser(@Valid @RequestBody ManageUserDtoRequest manageUserDtoRequest) {
@@ -39,7 +42,7 @@ public class ManageUserController {
             User user = manageUserService.createUser(manageUserDtoRequest);
             ManageUserDtoResponse manageUserDtoResponse = new ManageUserDtoResponse();
             modelMapper.map(user, manageUserDtoResponse);
-            return new ResponseEntity<>(manageUserDtoResponse, HttpStatus.CREATED);
+            return ResponseEntity.status(HttpStatus.CREATED).body(manageUserDtoResponse);
         } catch (ItemAlreadyExistsException e) {
             return exceptionFormatter.customException(e, HttpStatus.NOT_ACCEPTABLE);
         } catch (SomeItemsNotFoundException e) {
@@ -53,8 +56,9 @@ public class ManageUserController {
     public ResponseEntity<?> getUsers() {
         try {
             List<User> users = manageUserService.getUsers();
-            List<ManageUserDtoResponse> usersDto = users.stream().map(item -> modelMapper.map(item, ManageUserDtoResponse.class)).collect(Collectors.toList());
-            return new ResponseEntity<>(usersDto, HttpStatus.OK);
+            List<ManageUserDtoResponse> usersDto = users.stream()
+                .map(item -> modelMapper.map(item, ManageUserDtoResponse.class)).toList();
+            return ResponseEntity.ok(usersDto);
         } catch (IllegalArgumentException e1) {
             return exceptionFormatter.customException(e1, HttpStatus.NOT_ACCEPTABLE);
         }
@@ -66,7 +70,7 @@ public class ManageUserController {
             User user = manageUserService.modifyUser(userDtoRequest);
             ManageUserDtoResponse manageUserDtoResponse = new ManageUserDtoResponse();
             modelMapper.map(user, manageUserDtoResponse);
-            return new ResponseEntity<>(manageUserDtoResponse, HttpStatus.OK);
+            return ResponseEntity.ok(manageUserDtoResponse);
         } catch (Exception e) {
             return exceptionFormatter.defaultException(e);
         }
@@ -76,7 +80,7 @@ public class ManageUserController {
     public ResponseEntity<?> resetPassword(@Valid @RequestBody AuthReqDTO authDtoRequest) {
         try {
             manageUserService.resetAndSendPassword(authDtoRequest);
-            return new ResponseEntity<>(null, HttpStatus.OK);
+            return ResponseEntity.ok().build();
         } catch (IllegalArgumentException e1) {
             return exceptionFormatter.customException(e1, HttpStatus.NOT_ACCEPTABLE);
         }
