@@ -1,39 +1,43 @@
 package pl.databucket.server.controller;
 
 import io.swagger.annotations.ApiParam;
+import java.util.List;
+import javax.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 import pl.databucket.server.dto.TemplateDto;
 import pl.databucket.server.entity.Template;
 import pl.databucket.server.exception.ExceptionFormatter;
 import pl.databucket.server.exception.ItemNotFoundException;
 import pl.databucket.server.exception.ModifyByNullEntityIdException;
-import pl.databucket.server.security.CustomUserDetails;
+import pl.databucket.server.security.TokenProvider;
 import pl.databucket.server.service.template.TemplateService;
-
-import javax.validation.Valid;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @CrossOrigin(origins = "*", allowedHeaders = "*")
 @RequestMapping("/api/templates")
 @RestController
+@RequiredArgsConstructor
 public class TemplateController {
 
     private final ExceptionFormatter exceptionFormatter = new ExceptionFormatter(TemplateController.class);
 
-    @Autowired
-    private TemplateService templateService;
-
-    @Autowired
-    private ModelMapper modelMapper;
-
+    private final TemplateService templateService;
+    private final ModelMapper modelMapper;
 
     @PreAuthorize("hasRole('SUPER')")
     @PostMapping
@@ -41,7 +45,7 @@ public class TemplateController {
         try {
             Template template = templateService.createTemplate(templateDto);
             modelMapper.map(template, templateDto);
-            return new ResponseEntity<>(templateDto, HttpStatus.CREATED);
+            return ResponseEntity.status(HttpStatus.CREATED).body(templateDto);
         } catch (Exception e) {
             return exceptionFormatter.defaultException(e);
         }
@@ -52,8 +56,9 @@ public class TemplateController {
     public ResponseEntity<?> getTemplates() {
         try {
             List<Template> templates = templateService.getTemplates();
-            List<TemplateDto> templatesDto = templates.stream().map(item -> modelMapper.map(item, TemplateDto.class)).collect(Collectors.toList());
-            return new ResponseEntity<>(templatesDto, HttpStatus.OK);
+            List<TemplateDto> templatesDto = templates.stream().map(item -> modelMapper.map(item, TemplateDto.class))
+                .toList();
+            return ResponseEntity.ok(templatesDto);
         } catch (Exception ee) {
             return exceptionFormatter.defaultException(ee);
         }
@@ -61,15 +66,22 @@ public class TemplateController {
 
     @PreAuthorize("hasRole('ADMIN')")
     @GetMapping(value = {"/project/{projectId}"}, produces = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<?> getProjectTemplates(@ApiParam(value="id", example = "1", required = true) @PathVariable Integer projectId) {
+    public ResponseEntity<?> getProjectTemplates(
+        @ApiParam(value = "id", example = "1", required = true) @PathVariable Integer projectId,
+        Authentication auth) {
         try {
             // Check if user has token generated to the projectId
-            if (!((CustomUserDetails) SecurityContextHolder.getContext().getAuthentication().getPrincipal()).getProjectId().equals(projectId))
+            Jwt jwt = (Jwt) auth.getPrincipal();
+            Long currentProjectId = jwt.getClaim(TokenProvider.PROJECT_ID);
+
+            if (!projectId.equals(currentProjectId.intValue())) {
                 return exceptionFormatter.customException("Incorrect project", HttpStatus.NOT_ACCEPTABLE);
+            }
 
             List<Template> templates = templateService.getTemplates(projectId);
-            List<TemplateDto> templatesDto = templates.stream().map(item -> modelMapper.map(item, TemplateDto.class)).collect(Collectors.toList());
-            return new ResponseEntity<>(templatesDto, HttpStatus.OK);
+            List<TemplateDto> templatesDto = templates.stream().map(item -> modelMapper.map(item, TemplateDto.class))
+                .toList();
+            return ResponseEntity.ok(templatesDto);
         } catch (ItemNotFoundException e) {
             return exceptionFormatter.customException(e, HttpStatus.NOT_FOUND);
         } catch (Exception ee) {
@@ -83,7 +95,7 @@ public class TemplateController {
         try {
             Template template = templateService.modifyTemplate(templateDto);
             modelMapper.map(template, templateDto);
-            return new ResponseEntity<>(templateDto, HttpStatus.OK);
+            return ResponseEntity.ok(templateDto);
         } catch (ItemNotFoundException | ModifyByNullEntityIdException e) {
             return exceptionFormatter.customException(e, HttpStatus.NOT_FOUND);
         } catch (Exception e) {
@@ -96,7 +108,7 @@ public class TemplateController {
     public ResponseEntity<?> deleteTemplate(@PathVariable int templateId) {
         try {
             templateService.deleteTemplate(templateId);
-            return new ResponseEntity<>(null, HttpStatus.NO_CONTENT);
+            return ResponseEntity.noContent().build();
         } catch (Exception e) {
             return exceptionFormatter.defaultException(e);
         }
@@ -107,7 +119,7 @@ public class TemplateController {
     public ResponseEntity<?> runTemplate(@PathVariable int templateId) {
         try {
             templateService.runTemplate(templateId);
-            return new ResponseEntity<>(null, HttpStatus.NO_CONTENT);
+            return ResponseEntity.noContent().build();
         } catch (Exception e) {
             return exceptionFormatter.defaultException(e);
         }
